@@ -4,6 +4,7 @@
   * Added support for ADP COR data
   * Added support for ADP 8+8-bit DRX data, also know as DRX8
   * Added support for complex antenna response to lsl.sim.nec_util.NECPattern
+  * Updated the updateLSLSSMIF.py script to use the new LWA1 SSMIF location on the archive
 
 1.1.1
   * Fixed a bug in the lsl.statistics.robust.checkfit function
